--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,9 @@ django==2.0.5 ; python_version > '3.4'
 djangorestframework-simplejwt==4.3.0
 djangorestframework==3.9.4
 et-xmlfile==1.0.1
+gunicorn==19.9.0
 idna==2.8
-isort==4.3.20
+isort==4.3.21
 itypes==1.1.0
 jdcal==1.4.1
 jinja2==2.10.1
