changed 'organization' and added 'contributor' models and views

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ django-simple-history = "*"
 django-extensions = "*"
 django-shortuuidfield = "*"
 gunicorn = "*"
+django-debug-toolbar = "*"
 
 [requires]
 python_version = "3.6"
