--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ defusedxml==0.6.0
 diff-match-patch==20181111
 django-cors-headers==3.0.2
 django-currentuser==0.3.3
+django-debug-toolbar==2.0
 django-extensions==2.2.1
 django-import-export==1.2.0
 django-markdownx==2.0.28
@@ -28,7 +29,7 @@ isort==4.3.21
 itypes==1.1.0
 jdcal==1.4.1
 jinja2==2.10.1
-jsonschema==3.0.1
+jsonschema==3.0.2
 lazy-object-proxy==1.4.1
 markdown==3.1.1
 markupsafe==1.1.1
@@ -49,6 +50,7 @@ requests==2.22.0
 shortuuid==0.5.0
 simplejson==3.16.0
 six==1.12.0
+sqlparse==0.3.0
 tablib==0.13.0
 typed-ast==1.4.0 ; implementation_name == 'cpython'
 uritemplate==3.0.0
