--- a/Pipfile
+++ b/Pipfile
@@ -44,7 +44,6 @@ pylint-plugin-utils = "==0.5"
 pylint = "==2.3.1"
 pyrsistent = "==0.15.4"
 pytz = "==2019.2"
-requests = "==2.22.0"
 shortuuid = "==0.5.0"
 simplejson = "==3.16.0"
 six = "==1.12.0"
@@ -52,7 +51,6 @@ sqlparse = "==0.3.0"
 tablib = "==0.13.0"
 typed-ast = "==1.4.0"
 uritemplate = "==3.0.0"
-urllib3 = "==1.25.3"
 wrapt = "==1.11.2"
 xlrd = "==1.2.0"
 xlwt = "==1.3.0"
@@ -65,6 +63,10 @@ MarkupSafe = "==1.1.1"
 Pillow = "==6.1.0"
 PyJWT = "==1.7.1"
 PyYAML = "==5.1.2"
+djangorestframework-link-header-pagination = "*"
+django-filters = "*"
+drf-rw-serializers = "*"
+django-filter = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
