--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ django-cors-headers==3.0.2
 django-currentuser==0.3.3
 django-debug-toolbar==2.0
 django-extensions==2.2.1
+django-filter==2.2.0
+django-filters==0.2.1
 django-import-export==1.2.0
 django-markdownx==2.0.28
 django-request-logging==0.7.0
@@ -20,8 +22,10 @@ django-rest-swagger==2.2.0
 django-shortuuidfield==0.1.3
 django-simple-history==2.7.3
 django==2.0.5 ; python_version > '3.4'
+djangorestframework-link-header-pagination==0.1.1
 djangorestframework-simplejwt==4.3.0
 djangorestframework==3.10.2
+drf-rw-serializers==1.0.2
 et-xmlfile==1.0.1
 gunicorn==19.9.0
 idna==2.8
@@ -52,9 +56,9 @@ simplejson==3.16.0
 six==1.12.0
 sqlparse==0.3.0
 tablib==0.13.0
-typed-ast==1.4.0 ; implementation_name == 'cpython'
+typed-ast==1.4.0
 uritemplate==3.0.0
-urllib3==1.25.3
+urllib3==1.25.5
 wrapt==1.11.2
 xlrd==1.2.0
 xlwt==1.3.0
