--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,11 @@ djangorestframework-link-header-pagination==0.1.1
 djangorestframework-simplejwt==4.3.0
 djangorestframework==3.10.2
 drf-rw-serializers==1.0.2
+drf-yasg==1.17.0
 et-xmlfile==1.0.1
 gunicorn==19.9.0
 idna==2.8
+inflection==0.3.1
 isort==4.3.21
 itypes==1.1.0
 jdcal==1.4.1
@@ -42,16 +44,20 @@ mccabe==0.6.1
 odfpy==1.4.0
 openapi-codec==1.3.2
 openpyxl==2.6.2
+packaging==19.2
 pillow==6.1.0
 psycopg2-binary==2.8.3
 pyjwt==1.7.1
 pylint-django==2.0.11
 pylint-plugin-utils==0.5
 pylint==2.3.1
+pyparsing==2.4.5
 pyrsistent==0.15.4
 pytz==2019.2
 pyyaml==5.1.2
 requests==2.22.0
+ruamel.yaml.clib==0.2.0 ; platform_python_implementation == 'CPython' and python_version < '3.8'
+ruamel.yaml==0.16.5
 shortuuid==0.5.0
 simplejson==3.16.0
 six==1.12.0
