--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
+  - make build
   - make test
 # safelist
 branches:
     only:
-    - master
     - dev
