updates for travis; changes to logging

--- a/Pipfile
+++ b/Pipfile
@@ -69,6 +69,7 @@ drf-rw-serializers = "*"
 django-filter = "*"
 coverage = "*"
 drf-yasg = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.6"
