--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==5.1
+django-cors-headers==3.2.1
+django-currentuser==0.5.0
+django-debug-toolbar==2.2
 django-filter==2.2.0
 django-markdownx==3.0.1
 django-request-logging==0.7.1
 django-simple-history==2.10.0
-django==3.0.6
+django==3.0.6 ; python_version >= '2.7'
 djangorestframework-simplejwt==4.4.0
 djangorestframework==3.11.0
 drf-rw-serializers==1.0.3
@@ -25,6 +28,7 @@ packaging==20.3
 pillow==7.1.2
 pyjwt==1.7.1
 pyparsing==2.4.7
+python-dotenv==0.13.0
 pytz==2020.1
 requests==2.23.0
 ruamel.yaml.clib==0.2.0 ; platform_python_implementation == 'CPython' and python_version < '3.9'
