added coveralls config;updated make test to submit test coverage

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ django-request-logging = "*"
 django-currentuser = "*"
 django-cors-headers = "*"
 python-dotenv = "*"
+python-coveralls = "*"
+coveralls = "*"
 
 [requires]
 python_version = "3.6"
