--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==5.1
+coveralls==2.0.0
 django-cors-headers==3.2.1
 django-currentuser==0.5.0
 django-debug-toolbar==2.2
@@ -15,6 +16,7 @@ django-simple-history==2.10.0
 django==3.0.6 ; python_version >= '2.7'
 djangorestframework-simplejwt==4.4.0
 djangorestframework==3.11.0
+docopt==0.6.2
 drf-rw-serializers==1.0.3
 drf-yasg==1.17.1
 idna==2.9
@@ -28,8 +30,10 @@ packaging==20.3
 pillow==7.1.2
 pyjwt==1.7.1
 pyparsing==2.4.7
+python-coveralls==2.9.3
 python-dotenv==0.13.0
 pytz==2020.1
+pyyaml==5.3.1
 requests==2.23.0
 ruamel.yaml.clib==0.2.0 ; platform_python_implementation == 'CPython' and python_version < '3.9'
 ruamel.yaml==0.16.10
