downgraded coverage from 5.1 to 4.5.4 due to failures in coveralls

--- a/Pipfile
+++ b/Pipfile
@@ -15,13 +15,13 @@ django-simple-history = "*"
 drf-rw-serializers = "*"
 drf-yasg = "*"
 djangorestframework-simplejwt = "*"
-coverage = "*"
 django-request-logging = "*"
 django-currentuser = "*"
 django-cors-headers = "*"
 python-dotenv = "*"
 python-coveralls = "*"
 coveralls = "*"
+coverage = "==4.5.4"
 
 [requires]
 python_version = "3.6"
