--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - make travis-build
   - make travis-lint
 script:
-  - make test
+  - make travis-test
 # safelist
 # branches:
 #     only:
