--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-markdownx==3.0.1
 django-request-logging==0.7.2
 django-simple-history==2.11.0
 django==3.1.1
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt>=4.4.0
 djangorestframework==3.11.1
 docopt==0.6.2
 drf-rw-serializers==1.0.4
@@ -30,7 +30,7 @@ markdown==3.2.2; python_version >= '3.5'
 markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 mccabe==0.6.1
 packaging==20.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pillow==7.2.0; python_version >= '3.5'
+pillow>=7.2.0
 pyjwt==1.7.1
 pylint==2.6.0
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
