--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,9 @@ stages:
   - test
   #- deploy
 
-test:
+Master:
   stage: test
   script:
-    - pip install pylint
     - pip install -r requirements.txt
     - rm -f db.sqlite3
     - rm -f ./api/migrations/0001_initial.py
@@ -24,6 +23,5 @@ test:
     - python manage.py loaddata -v 0 ./fixtures/publisher.json
     - python manage.py loaddata -v 0 ./fixtures/bookformat.json ./fixtures/contributor.json ./fixtures/person.json ./fixtures/organization.json ./fixtures/gamesystem.json ./fixtures/game.json ./fixtures/book.json ./fixtures/workflow.json ./fixtures/token.json
     - python manage.py populate_history -v 0 --auto
-    - pylint api --ignore=migrations,settings.py --disable=E0401,W0613,R0201,R0401,R0801,R0903
     - coverage run --rcfile=.coveragerc --source='.' manage.py test api -v 0
     - coveralls
