--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-markdownx==3.0.1
 django-request-logging==0.7.2
 django-simple-history==2.11.0
 django==3.1.1 ; python_version >= '2.7'
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt>=4.4.0
 djangorestframework==3.11.1
 docopt==0.6.2
 drf-rw-serializers==1.0.4
